--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,89 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  color: #6e6e6e;
+}
+
+@keyframes onload-description {
+  from {
+	margin-top: -30px;
+	opacity: 0;
+  }
+  to {
+	margin-top: 0px;
+	opacity: 1;
+  }
+}
+
+#description {
+  max-width: 900px;
+  margin: auto;
+  animation: onload-description .5s ease-out;
+}
+
+.region {
+  display: block;
+  margin-left: auto;
+  border: none;
+  margin-bottom: 3px;
+  padding: 3px;
+  background-color: inherit;
+  font-size: 12pt;
+}
+
+.region:hover {
+  border-bottom: 2px solid #662D91;
+  padding-bottom: 1px;
+}
+
+.region:focus {
+  outline: none;
+}
+
+#outermap {
+  width: 100%;
+  max-width: 1380px;
+  margin: 20px auto 0 auto;
+}
+
+#regions {
+  margin-top: 50px;
+  margin-right: 10px;
+  width: 190px;
+  float: left;
+}
+
+#map {
+  margin-left: 200px;
+  margin-right: 200px;
+  width: 980px;
+}
+
+#controls {
+  margin-top: 50px;
+  margin-left: 10px;
+  width: 190px;
+  float: right;
+}
+
+#controls button {
+  display: block;
+  width: 22px;
+  border: 1px solid #222;
+  text-align: center;
+}
+
+#controls button#plus {
+  border-radius: 3px 3px 0px 0px;
+}
+
+#controls button#minus {
+  border-top: none;
+  border-radius: 0px 0px 3px 3px;
+}
+
+#reset {
+  margin-top: 10px;
+}
