--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,48 @@
+/* Overall */
+body {
+  background-color: #fbf9fc;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#overall {
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Text */
+.header {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 30px;
+}
+
+#title {
+  font-size: 75px;
+  color: #662D91;
+}
+
+#subhead {
+  font-family: courier;
+}
+
+#info {
+  font-size: 17px;
+  text-align: right;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #662d91;
+  font-family: courier;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-body {
-  color: #6e6e6e;
-}
-
+/* Description under map */
 @keyframes onload-description {
   from {
 	margin-top: -30px;
@@ -53,9 +60,11 @@ body {
   animation: onload-description .5s ease-out;
 }
 
+/* Region sidebar */
 .region {
   display: block;
-  margin-left: auto;
+  margin-left: 10px;
+  text-align: right;
   border: none;
   margin-bottom: 3px;
   padding: 3px;
@@ -72,36 +81,64 @@ body {
   outline: none;
 }
 
-#outermap {
-  width: 100%;
-  max-width: 1380px;
-  margin: 20px auto 0 auto;
-}
-
 #regions {
-  margin-top: 50px;
+  margin-top: 60px;
   margin-right: 10px;
   width: 190px;
   float: left;
 }
 
-#map {
-  margin-left: 200px;
-  margin-right: 200px;
-  width: 980px;
+#reset {
+  margin-top: 10px;
 }
 
-#controls {
-  margin-top: 50px;
+/* Map-related? */
+#outermap {
   margin-left: 10px;
-  width: 190px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
+
+#map {
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 10px;
+}
+
+@media (min-width: 1000px) {
+  #map {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+}
+
+@media (min-width: 600px) {
+  #map {
+    margin-left: 75px;
+    margin-right: 75px;
+  }
+}
+
+@media (max-width: 600px) {
+  #map {
+    margin-left: 25px;
+    margin-right: 25px;
+  }
+}
+
+/* Zoom in/out */
+#controls {
+  padding-top: 70px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 30px;
   float: right;
 }
 
 #controls button {
   display: block;
   width: 22px;
-  border: 1px solid #222;
+  border: 1px solid #662d91;
   text-align: center;
 }
 
@@ -114,6 +151,3 @@ body {
   border-radius: 0px 0px 3px 3px;
 }
 
-#reset {
-  margin-top: 10px;
-}
