--- a/src/App.css
+++ b/src/App.css
@@ -29,11 +29,20 @@ button {
   filter: blur(10px);
   margin: -15% -15%;
   opacity: 0.8;
+  text-align: center;
+
 }
 
 #content {
   position: fixed;
   z-index: 1;
+  left:0;
+  right:0;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  position: absolute;
 }
 
 .App {
@@ -60,12 +69,27 @@ button {
 #title {
   font-size: 75px;
   color: #662D91;
+  display: inline-block;
+  text-align: center;
 }
-
+#subtitle {
+  margin-top:-55px;
+  font-size: 35px;
+  color: #662D91;
+  
+}
+#pcs_title {
+  margin-top:-25px;
+  font-size: 25px;
+  color: #662D91;
+}
 #subhead {
-  font-family: courier, monospace;
+  font-family: Roboto;
 }
 
+#rubric_des {
+  font-family: Roboto;
+}
 #info {
   font-size: 17px;
   text-align: right;
@@ -73,7 +97,19 @@ button {
 
 .App-link {
   color: #662d91;
-  font-family: courier, monospace;
+  font-family: Roboto;
+}
+
+button {
+  margin-top: 20px;
+  line-height: 60px;
+  font-weight: bold;
+  padding: 0 40px;
+  background: #C71585;
+  border: none;
+}
+button:hover {
+  background: #DB7093;
 }
 
 /* Description under map */
