Added button, fixed font and centering

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ button {
 }
 
 #content {
-  position: fixed;
+  position: fixedgit comm;
   z-index: 1;
   left:0;
   right:0;
@@ -43,6 +43,7 @@ button {
   margin-right: auto;
 
   position: absolute;
+  font-family: Roboto;
 }
 
 .App {
