--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,8 @@ html {
 
 body {
   background-color: #fbf9fc;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto', sans-serif;
   height: 100%;
-}
-
-button {
-  font-family: 'Poppins', sans-serif;
 }
 
 #root, #routerdiv {
@@ -26,11 +22,10 @@ button {
   width: 130%;
   z-index: 0;
   position: fixed;
-  filter: blur(10px);
+  filter: blur(5px);
   margin: -15% -15%;
   opacity: 0.8;
   text-align: center;
-
 }
 
 #content {
@@ -38,10 +33,8 @@ button {
   z-index: 1;
   left:0;
   right:0;
-
   margin-left: auto;
   margin-right: auto;
-
   position: absolute;
   font-family: Roboto;
 }
@@ -73,24 +66,27 @@ button {
   display: inline-block;
   text-align: center;
 }
+
 #subtitle {
   margin-top:-55px;
   font-size: 35px;
-  color: #662D91;
-  
+  color: #662D91;  
 }
+
 #pcs_title {
   margin-top:-25px;
-  font-size: 25px;
-  color: #662D91;
+  font-size: 20px;
+  color: #000;
 }
-#subhead {
+
+/*#subhead {
   font-family: Roboto;
 }
 
 #rubric_des {
   font-family: Roboto;
-}
+}*/
+
 #info {
   font-size: 17px;
   text-align: right;
@@ -102,15 +98,20 @@ button {
 }
 
 button {
-  margin-top: 20px;
+  margin-top: 10px;
   line-height: 60px;
   font-weight: bold;
-  padding: 0 40px;
-  background: #C71585;
+  padding: 0 25px;
+  background: #D1B4E7;
+  /*background: #AE82CF;*/
   border: none;
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
 }
+
 button:hover {
-  background: #DB7093;
+  /*background: #D1B4E7;*/
+  background: #AE82CF;
 }
 
 /* Description under map */
@@ -140,12 +141,13 @@ button:hover {
   margin-bottom: 3px;
   padding: 3px;
   background-color: inherit;
-  font-size: 12pt;
+  font-size: 15pt;
 }
 
 .region:hover {
-  border-bottom: 2px solid #662D91;
+  /*border-bottom: 2px solid #662D91;*/
   padding-bottom: 1px;
+  background-color: #D1B4E7;
 }
 
 .region:focus {
@@ -153,14 +155,14 @@ button:hover {
 }
 
 #regions {
-  margin-top: 60px;
+  margin-top: 40px;
   margin-right: 10px;
   width: 190px;
   float: left;
 }
 
 #reset {
-  margin-top: 10px;
+  /*margin-top: 10px;*/
 }
 
 /* Map-related? */
@@ -202,22 +204,23 @@ button:hover {
   padding-top: 70px;
   margin-right: 20px;
   margin-left: 20px;
-  margin-bottom: 30px;
+  /*margin-bottom: 30px;*/
   float: right;
 }
 
 #controls button {
   display: block;
-  width: 22px;
-  border: 1px solid #662d91;
+  /*width: 22px;*/
+  /*border: 1px solid #662d91;*/
   text-align: center;
 }
 
 #controls button#plus {
   border-radius: 3px 3px 0px 0px;
+  font-size: 20px;
 }
 
 #controls button#minus {
-  border-top: none;
   border-radius: 0px 0px 3px 3px;
+  font-size: 35px;
 }
