--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,12 @@ body {
   background: url("./trianglify.svg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 130%;
-  width: 130%;
   z-index: 0;
   position: fixed;
+  left: -10px;
+  top: -10px;
+  right: -10px;
+  bottom: -10px;
   filter: blur(5px);
   margin: -15% -15%;
   opacity: 0.8;
@@ -108,11 +110,12 @@ header button#button {
   border: none;
   font-size: 20px;
   font-family: Poppins, sans-serif;
+  transition: 0.4s all;
 }
 
 header button#button:hover {
   /*background: #D1B4E7;*/
-  background: #AE82CF;
+  background: #E62739;
 }
 
 /* Description under map */
